# parallel-iterator

./: Cargo.toml  README.md
examples/: example_1.rs  example_2.rs
src/: lib.rs
