[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["concurrency"]
description = "Parallelize any iterator with ease!"
keywords = ["parallel", "iterator", "threads"]
license = "Apache-2.0/MIT"
name = "parallel-iterator"
readme = "README.md"
repository = "https://github.com/anderejd/parallel-iterator"
version = "0.1.6"

[badges]
maintenance = { status = "experimental" }

[dependencies]
crossbeam-channel = "0.4.2"
num_cpus = "1.13.0"
